test/Eval/assert-stringify.src
// R %srcc --sema --verify -fstringify-asserts %s
program test;

#assert false; // expected-error (Assertion failed: 'false') expected-note (Expression evaluated to 'false')